<resources>
    <string name="app_name">Instagram App Clone</string>
    <string name="str_instagram">Instagram</string>
    <string name="str_fullname">Fullname</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_cpassword">Confirm Password</string>
    <string name="str_signin">Sign In</string>
    <string name="str_signup">SignUp</string>
    <string name="str_already_account">Already have an account?</string>
    <string name="str_donot_account">Don\'t have an account?</string>
    <string name="str_home">Home</string>
    <string name="str_search">Search</string>
    <string name="str_upload">Upload</string>
    <string name="str_favorite">Favorite</string>
    <string name="str_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_write_a_caption">Write a caption</string>

    <string name="str_write_caption">Write a caption</string>
    <string name="str_follow">Follow</string>
    <string name="str_following">Following</string>
    <string name="str_followers">Followers</string>
    <string name="str_posts">Posts</string>

    <string name="str_signin_success">Signed in successfully</string>
    <string name="str_signin_failed">Sign in failed</string>
    <string name="str_signup_success">Signed up successfully</string>
    <string name="str_signup_failed">Sign up failed</string>
</resources>