<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:menuCategory="secondary"
        android:title="@string/str_home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/navigation_search"
        android:menuCategory="secondary"
        android:title="@string/str_search"
        android:icon="@drawable/ic_search"/>

    <item
        android:id="@+id/navigation_upload"
        android:menuCategory="secondary"
        android:title="@string/str_upload"
        android:icon="@drawable/ic_add"/>

    <item
        android:id="@+id/navigation_favorite"
        android:menuCategory="secondary"
        android:title="@string/str_favorite"
        android:icon="@drawable/ic_love"/>

    <item
        android:id="@+id/navigation_profile"
        android:menuCategory="secondary"
        android:title="@string/str_profile"
        android:icon="@drawable/ic_profile"/>
</menu>